// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the correct message with multiple values 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $2,787.90
  </h1>
</div>
`;

exports[`should render the correct message with one value 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;
